[package]
name = "intern"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0"
gjson = "0.8"
notify = "4.0.17"
regex = "1.5.4"
rusqlite = "0.26.0"
rust-stemmers = "1.2.0"
unicode-normalization = "0.1.19"

