[package]
name = "intern"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
dirs = "4.0"
gitignore = "1.0.7"
gjson = "0.8"
flexi_logger = "0.19.5"
log = "0.4.14"
mio = { version = "0.7", features = ["os-poll", "tcp"] }
notify = "4.0.17"
regex = "1.5.4"
rusqlite = "0.26.0"
rust-stemmers = "1.2.0"
unicode-normalization = "0.1.19"

